crates/spt-tui/tests/snapshots/pages_snapshots__auth_page_80x40.snap
---
source: crates/spt-tui/tests/pages_snapshots.rs
assertion_line: 89
expression: snap
---
   ┌auth.method────────────────────────────────────────────────────────────────┐
 ▶ │public_key                                                                 │
   └───────────────────────────────────────────────────────────────────────────┘
   ┌auth.identity_file─────────────────────────────────────────────────────────┐
   │/home/alice/.ssh/id_ed25519                                                │
   └───────────────────────────────────────────────────────────────────────────┘
   ┌auth.certificate_file──────────────────────────────────────────────────────┐
   │                                                                           │
   └───────────────────────────────────────────────────────────────────────────┘
   ┌auth.passphrase────────────────────────────────────────────────────────────┐
   │                                                                           │
   └───────────────────────────────────────────────────────────────────────────┘
   ┌auth.password──────────────────────────────────────────────────────────────┐
   │                                                                           │
   └───────────────────────────────────────────────────────────────────────────┘
   ┌auth.token─────────────────────────────────────────────────────────────────┐
   │                                                                           │
   └───────────────────────────────────────────────────────────────────────────┘
   ┌auth.agent─────────────────────────────────────────────────────────────────┐
   │[ ] no                                                                     │
   └───────────────────────────────────────────────────────────────────────────┘
   ┌auth.identity_hint─────────────────────────────────────────────────────────┐
   │                                                                           │
   └───────────────────────────────────────────────────────────────────────────┘
   ┌auth.keyboard_interactive──────────────────────────────────────────────────┐
   │[ ] no                                                                     │
   └───────────────────────────────────────────────────────────────────────────┘
   ┌auth.oidc_issuer───────────────────────────────────────────────────────────┐
   │                                                                           │
   └───────────────────────────────────────────────────────────────────────────┘
   ┌auth.oidc_client_id────────────────────────────────────────────────────────┐
   │                                                                           │
   └───────────────────────────────────────────────────────────────────────────┘
