crates/spt-tui/tests/snapshots/pages_snapshots__basics_page_80x20.snap
---
source: crates/spt-tui/tests/pages_snapshots.rs
assertion_line: 77
expression: snap
---
   ┌id─────────────────────────────────────────────────────────────────────────┐
 ▶ │demo                                                                       │
   └───────────────────────────────────────────────────────────────────────────┘
   ┌description────────────────────────────────────────────────────────────────┐
   └───────────────────────────────────────────────────────────────────────────┘
   ┌protocol───────────────────────────────────────────────────────────────────┐
   │ssh2                                                                       │
   └───────────────────────────────────────────────────────────────────────────┘
   ┌host───────────────────────────────────────────────────────────────────────┐
   └───────────────────────────────────────────────────────────────────────────┘
   ┌port───────────────────────────────────────────────────────────────────────┐
   │                                                                           │
   └───────────────────────────────────────────────────────────────────────────┘
   ┌endpoint───────────────────────────────────────────────────────────────────┐
   └───────────────────────────────────────────────────────────────────────────┘
   ┌startup────────────────────────────────────────────────────────────────────┐
   │                                                                           │
   └───────────────────────────────────────────────────────────────────────────┘
   ┌failure_policy─────────────────────────────────────────────────────────────┐
   └───────────────────────────────────────────────────────────────────────────┘
