crates/spt-tui/tests/snapshots/pages_snapshots__basics_page_editing_empty_description_80x20.snap
---
source: crates/spt-tui/tests/pages_snapshots.rs
assertion_line: 207
expression: snap
---
   ┌id─────────────────────────────────────────────────────────────────────────┐
   │demo                                                                       │
   └───────────────────────────────────────────────────────────────────────────┘
   ┌description────────────────────────────────────────────────────────────────┐
 ▶ │▏                                                                          │
   └───────────────────────────────────────────────────────────────────────────┘
   ┌protocol───────────────────────────────────────────────────────────────────┐
   │● ssh2                                                                     │
   └───────────────────────────────────────────────────────────────────────────┘
   ┌startup────────────────────────────────────────────────────────────────────┐
   │○ eager                                                                    │
   └───────────────────────────────────────────────────────────────────────────┘
   ┌failure_policy─────────────────────────────────────────────────────────────┐
   │○ retry                                                                    │
   └───────────────────────────────────────────────────────────────────────────┘
