crates/spt-tui/tests/snapshots/pages_snapshots__basics_page_editing_protocol_after_rotate_80x20.snap
---
source: crates/spt-tui/tests/pages_snapshots.rs
assertion_line: 263
expression: snap
---
   ┌id─────────────────────────────────────────────────────────────────────────┐
   │demo                                                                       │
   └───────────────────────────────────────────────────────────────────────────┘
   ┌description────────────────────────────────────────────────────────────────┐
   └───────────────────────────────────────────────────────────────────────────┘
   ┌protocol───────────────────────────────────────────────────────────────────┐
 ▶ │◀ ssh2 ▶  (1/2)                                                            │
   └───────────────────────────────────────────────────────────────────────────┘
   ┌host───────────────────────────────────────────────────────────────────────┐
   └───────────────────────────────────────────────────────────────────────────┘
   ┌port───────────────────────────────────────────────────────────────────────┐
   │                                                                           │
   └───────────────────────────────────────────────────────────────────────────┘
   ┌endpoint───────────────────────────────────────────────────────────────────┐
   └───────────────────────────────────────────────────────────────────────────┘
   ┌startup────────────────────────────────────────────────────────────────────┐
   │                                                                           │
   └───────────────────────────────────────────────────────────────────────────┘
   ┌failure_policy─────────────────────────────────────────────────────────────┐
   └───────────────────────────────────────────────────────────────────────────┘
