crates/spt-tui/tests/snapshots/pages_snapshots__connection_page_80x40.snap
---
source: crates/spt-tui/tests/pages_snapshots.rs
expression: snap
---
┌host──────────────────────────────────────────────────────────────────────────┐
│demo.example.com                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌port──────────────────────────────────────────────────────────────────────────┐
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌endpoint──────────────────────────────────────────────────────────────────────┐
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌user──────────────────────────────────────────────────────────────────────────┐
│alice                                                                         │
└──────────────────────────────────────────────────────────────────────────────┘
┌connect_timeout───────────────────────────────────────────────────────────────┐
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌connection.connect_timeout────────────────────────────────────────────────────┐
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌connection.handshake_timeout──────────────────────────────────────────────────┐
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌connection.auth_timeout───────────────────────────────────────────────────────┐
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌connection.keepalive_retries──────────────────────────────────────────────────┐
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌endpoints (count)─────────────────────────────────────────────────────────────┐
│0                                                                             │
└──────────────────────────────────────────────────────────────────────────────┘
┌hops (count)──────────────────────────────────────────────────────────────────┐
│0                                                                             │
└──────────────────────────────────────────────────────────────────────────────┘
