crates/spt-tui/tests/snapshots/pages_snapshots__crypto_page_80x40.snap
---
source: crates/spt-tui/tests/pages_snapshots.rs
expression: snap
---
┌crypto.policy─────────────────────────────────────────────────────────────────┐
│● modern                                                                      │
└──────────────────────────────────────────────────────────────────────────────┘
┌crypto.allow_deprecated───────────────────────────────────────────────────────┐
│[ ] no                                                                        │
└──────────────────────────────────────────────────────────────────────────────┘
┌crypto.warn_on_deprecated─────────────────────────────────────────────────────┐
│[ ] no                                                                        │
└──────────────────────────────────────────────────────────────────────────────┘
┌crypto.ciphers────────────────────────────────────────────────────────────────┐
│[ ] chacha20-poly1305@openssh.com                                             │
└──────────────────────────────────────────────────────────────────────────────┘
┌crypto.kex_algorithms─────────────────────────────────────────────────────────┐
│[ ] curve25519-sha256                                                         │
└──────────────────────────────────────────────────────────────────────────────┘
┌crypto.macs───────────────────────────────────────────────────────────────────┐
│[ ] hmac-sha2-256-etm@openssh.com                                             │
└──────────────────────────────────────────────────────────────────────────────┘
┌crypto.host_key_algorithms────────────────────────────────────────────────────┐
│[ ] ssh-ed25519                                                               │
└──────────────────────────────────────────────────────────────────────────────┘
┌crypto.compression────────────────────────────────────────────────────────────┐
│[ ] none                                                                      │
└──────────────────────────────────────────────────────────────────────────────┘
