crates/spt-tui/tests/snapshots/pages_snapshots__diagnostics_page_80x20.snap
---
source: crates/spt-tui/tests/pages_snapshots.rs
assertion_line: 143
expression: snap
---
   ┌tags───────────────────────────────────────────────────────────────────────┐
 ▶ │                                                                           │
   └───────────────────────────────────────────────────────────────────────────┘
   ┌acknowledge_experimental───────────────────────────────────────────────────┐
   │[ ] no                                                                     │
   └───────────────────────────────────────────────────────────────────────────┘
   ┌ssh3.idle_timeout──────────────────────────────────────────────────────────┐
   │                                                                           │
   └───────────────────────────────────────────────────────────────────────────┘
   ┌ssh3.keepalive─────────────────────────────────────────────────────────────┐
   │                                                                           │
   └───────────────────────────────────────────────────────────────────────────┘
   ┌ssh3.enable_datagrams──────────────────────────────────────────────────────┐
   │[ ] no                                                                     │
   └───────────────────────────────────────────────────────────────────────────┘
