crates/spt-tui/tests/snapshots/pages_snapshots__dns_page_100x20.snap
---
source: crates/spt-tui/tests/pages_snapshots.rs
assertion_line: 131
expression: snap
---
   ┌forward[0].dns_names───────────────────────────────────────────────────────────────────────────┐
 ▶ │                                                                                               │
   └───────────────────────────────────────────────────────────────────────────────────────────────┘


┌Global [[dns.records]] (read-only here — edit via `spt config render`)────────────────────────────┐
│service.local                    A     127.0.0.1                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
