crates/spt-tui/tests/snapshots/pages_snapshots__dns_page_record_editor_a_100x30.snap
---
source: crates/spt-tui/tests/pages_snapshots.rs
assertion_line: 467
expression: snap
---
   ┌forward[0].dns_names───────────────────────────────────────────────────────────────────────────┐
 ▶ │                                                                                               │
   └───────────────────────────────────────────────────────────────────────────────────────────────┘


┌Records* (a=add d=del Enter=edit)─────┐┌name──────────────────────────────────────────────────────┐
│▶ service.local            [A]        ││service.local                                             │
│  _sip._tcp.example        [SRV]      │└──────────────────────────────────────────────────────────┘
│                                      │┌type──────────────────────────────────────────────────────┐
│                                      ││A                                                         │
│                                      │└──────────────────────────────────────────────────────────┘
│                                      │┌value─────────────────────────────────────────────────────┐
│                                      ││127.0.0.1                                                 │
│                                      │└──────────────────────────────────────────────────────────┘
│                                      │┌ttl───────────────────────────────────────────────────────┐
│                                      ││                                                          │
│                                      │└──────────────────────────────────────────────────────────┘
│                                      │┌priority──────────────────────────────────────────────────┐
│                                      ││                                                          │
│                                      │└──────────────────────────────────────────────────────────┘
│                                      │┌weight────────────────────────────────────────────────────┐
│                                      ││                                                          │
│                                      │└──────────────────────────────────────────────────────────┘
│                                      │┌port──────────────────────────────────────────────────────┐
│                                      ││                                                          │
│                                      │└──────────────────────────────────────────────────────────┘
│                                      │
│                                      │
│                                      │
└──────────────────────────────────────┘
