crates/spt-tui/tests/snapshots/pages_snapshots__dns_page_record_editor_srv_100x30.snap
---
source: crates/spt-tui/tests/pages_snapshots.rs
assertion_line: 482
expression: snap
---
   ┌forward[0].dns_names───────────────────────────────────────────────────────────────────────────┐
 ▶ │                                                                                               │
   └───────────────────────────────────────────────────────────────────────────────────────────────┘


┌Records* (a=add d=del Enter=edit)─────┐┌name──────────────────────────────────────────────────────┐
│  service.local            [A]        ││_sip._tcp.example                                         │
│▶ _sip._tcp.example        [SRV]      │└──────────────────────────────────────────────────────────┘
│                                      │┌type──────────────────────────────────────────────────────┐
│                                      ││SRV                                                       │
│                                      │└──────────────────────────────────────────────────────────┘
│                                      │┌value─────────────────────────────────────────────────────┐
│                                      ││sip.example.com                                           │
│                                      │└──────────────────────────────────────────────────────────┘
│                                      │┌ttl───────────────────────────────────────────────────────┐
│                                      ││                                                          │
│                                      │└──────────────────────────────────────────────────────────┘
│                                      │┌priority──────────────────────────────────────────────────┐
│                                      ││10                                                        │
│                                      │└──────────────────────────────────────────────────────────┘
│                                      │┌weight────────────────────────────────────────────────────┐
│                                      ││5                                                         │
│                                      │└──────────────────────────────────────────────────────────┘
│                                      │┌port──────────────────────────────────────────────────────┐
│                                      ││5060                                                      │
│                                      │└──────────────────────────────────────────────────────────┘
│                                      │
│                                      │
│                                      │
└──────────────────────────────────────┘
