crates/spt-tui/tests/snapshots/pages_snapshots__dns_page_records_list_100x30.snap
---
source: crates/spt-tui/tests/pages_snapshots.rs
assertion_line: 452
expression: snap
---
   ┌forward[0].dns_names───────────────────────────────────────────────────────────────────────────┐
 ▶ │                                                                                               │
   └───────────────────────────────────────────────────────────────────────────────────────────────┘


┌Records* (a=add d=del Enter=edit)─────┐┌Record detail─────────────────────────────────────────────┐
│▶ service.local            [A]        ││name:     service.local                                   │
│  _sip._tcp.example        [SRV]      ││type:     A                                               │
│                                      ││value:    127.0.0.1                                       │
│                                      ││ttl:                                                      │
│                                      ││priority:                                                 │
│                                      ││weight:                                                   │
│                                      ││port:                                                     │
│                                      ││                                                          │
│                                      ││                                                          │
│                                      ││                                                          │
│                                      ││                                                          │
│                                      ││                                                          │
│                                      ││                                                          │
│                                      ││                                                          │
│                                      ││                                                          │
│                                      ││                                                          │
│                                      ││                                                          │
│                                      ││                                                          │
│                                      ││                                                          │
│                                      ││                                                          │
│                                      ││                                                          │
│                                      ││                                                          │
│                                      ││                                                          │
└──────────────────────────────────────┘└──────────────────────────────────────────────────────────┘
