crates/spt-tui/tests/snapshots/pages_snapshots__endpoints_page_100x20.snap
---
source: crates/spt-tui/tests/pages_snapshots.rs
assertion_line: 300
expression: snap
---
┌Endpoints (a=add, d=del, Enter=ed┐┌Detail─────────────────────────────────────────────────────────┐
│▶      primary edge-1.example.com││name:     primary                                              │
│        backup edge-2.example.com││host:     edge-1.example.com                                   │
│                                 ││port:     22                                                   │
│                                 ││priority: 0                                                    │
│                                 ││weight:                                                        │
│                                 ││user:                                                          │
│                                 ││auth:     auth=global                                          │
│                                 ││                                                               │
│                                 ││                                                               │
│                                 ││                                                               │
│                                 ││                                                               │
│                                 ││                                                               │
│                                 ││                                                               │
│                                 ││                                                               │
│                                 ││                                                               │
│                                 ││                                                               │
│                                 ││                                                               │
│                                 ││                                                               │
└─────────────────────────────────┘└───────────────────────────────────────────────────────────────┘
